--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -6433,10 +6433,10 @@ msgstr "Mostrar comentarios de datos de la sesion"
 msgid "Subscription sessions in the category"
 msgstr "Inscribir sesiones en una categoría"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Lista de sesiones de la plataforma"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Lista de sesiones en la categoría"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
