--- a/translations/messages.eu_ES.po
+++ b/translations/messages.eu_ES.po
@@ -6420,10 +6420,10 @@ msgstr "Erakutsi saioaren datuen iruzkina"
 msgid "Subscription sessions in the category"
 msgstr "Inskribatu saioak kategorian"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Plataformako saio zerrenda"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Saio zerrenda kategorietan"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
