--- a/translations/messages.fa.po
+++ b/translations/messages.fa.po
@@ -6420,10 +6420,10 @@ msgstr "نمایش دیدگاه اطلاعات جلسه"
 msgid "Subscription sessions in the category"
 msgstr ""
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "فهرت جلسات در این پلاتفرم"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "فهرست جلسات در این دسته"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
