--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -6429,10 +6429,10 @@ msgstr "Mostra la descrizione delle sessioni"
 msgid "Subscription sessions in the category"
 msgstr "Assegna una categoria alle sessioni"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Elenco delle sessioni in piattaforma"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Elenco delle sessioni nelle diverse categorie"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
