--- a/translations/messages.pl.po
+++ b/translations/messages.pl.po
@@ -6421,10 +6421,10 @@ msgstr "Pokaż komentarz do danych sesji"
 msgid "Subscription sessions in the category"
 msgstr "Subskrypcja sesji w kategorii"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Lista sesji na platformie"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Lista sesji w kategoriach"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
