--- a/translations/messages.sl.po
+++ b/translations/messages.sl.po
@@ -6429,10 +6429,10 @@ msgstr "Prikaži komentar podatov seje"
 msgid "Subscription sessions in the category"
 msgstr "Vpiši seje v kategorijo"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Seznam sej platforme"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Seznam sej v kategorijah"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
