--- a/translations/messages.he.po
+++ b/translations/messages.he.po
@@ -6429,10 +6429,10 @@ msgstr "הצג הערה של נתוני הפעלה"
 msgid "Subscription sessions in the category"
 msgstr "הפעלות הרשמה בקטגוריה"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "רשימת הפעלות בפלטפורמה"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "רשימת מפגשים בקטגוריות"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
