--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -6429,10 +6429,10 @@ msgstr "Vezi comentariile  de date ale sesiunii"
 msgid "Subscription sessions in the category"
 msgstr "Inscrieti sesiuni intro categorie"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Lista de sesiuni a plataformei"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Lista de sesiuni in categorie"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
