--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -6428,10 +6428,10 @@ msgstr "Zobraziť údaje stretnutia komentára"
 msgid "Subscription sessions in the category"
 msgstr "Zapísané stretnutie v kategórií"
 
-msgid "List of session in the platform"
+msgid "List of sessions on the platform"
 msgstr "Zoznam stretnutí v platforme"
 
-msgid "List of sesiones in the categories"
+msgid "List of sessions in the categories"
 msgstr "Zoznam stretnutí v kategóriách"
 
 msgid "If you want to export courses containing sessions, which will ensure that these seansido included in the export to any of that will have to choose in the list."
