--- a/translations/messages.ast_ES.po
+++ b/translations/messages.ast_ES.po
@@ -5217,8 +5217,8 @@ msgstr "Si activa esta opción, de la que fae clic nun corréu electrónicu va a
 msgid "Include header line?"
 msgstr "¿ Amestar la ringlera d'encabezamientu del CSV ?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Sí, amestar los encabezamientos CSV <br/> Esta ringlera define los campos y ye necesaria si quier importar archivos a otra plataforma Chamilo"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Esta ringlera define los campos y ye necesaria si quier importar archivos a otra plataforma Chamilo"
 
 msgid "List of users subscribed to course"
 msgstr "Llistáu d'usuarios matriculaos nel cursu"
@@ -15618,7 +15618,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
