--- a/translations/messages.ca_ES.po
+++ b/translations/messages.ca_ES.po
@@ -5225,8 +5225,8 @@ msgstr "Si aquesta opció està activa, cliqueu sobre una adreça de correu-e i 
 msgid "Include header line?"
 msgstr "Afegir la línia de capçalera del CSV ?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Sí, afegir les capçaleres CSVAquesta línia defineix tots els camps i es necessita quan vulgui importar l'arxiu en una altra plataforma Chamilo"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Aquesta línia defineix tots els camps i es necessita quan vulgui importar l'arxiu en una altra plataforma Chamilo"
 
 msgid "List of users subscribed to course"
 msgstr "Llistat d'usuaris subscrits al curs"
@@ -15626,7 +15626,7 @@ msgstr "Llista de cursos assignats a l'administrador de sessions"
 msgid "Assign sessions to platform administrator"
 msgstr "Assigna sessions a l'administrador de la plataforma"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "Assigna sessions a l'administrador de sessions"
 
 msgid "Assigned sessions list to platform administrator"
