--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -5210,8 +5210,8 @@ msgstr "Pokud je tato funkce zapnuta, kliknutím na e-mail adresu se otevře mai
 msgid "Include header line?"
 msgstr "Přidat řádek záhlaví CSV"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Ano, přidat záhlaví CSV<br/>Tento řádek definuje pole a je nutné, při importu souboru na jiný Chamilo portál"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Tento řádek definuje pole a je nutné, při importu souboru na jiný Chamilo portál"
 
 msgid "List of users subscribed to course"
 msgstr "Seznam uživatelů zapsaných do školení"
@@ -15611,7 +15611,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
