--- a/translations/messages.da.po
+++ b/translations/messages.da.po
@@ -5217,8 +5217,8 @@ msgstr "Hvis denne funktion er aktiv, vil et klik på en e-mailadresse åbne en 
 msgid "Include header line?"
 msgstr "Tilføj sidehovedet i CSV filen?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Ja, tilføj CSV sidehoved. <br /> Dette område definerer felterne i din fil og er nødvendig, når du vil importere filen til en anden e-læringsplatform"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Dette område definerer felterne i din fil og er nødvendig, når du vil importere filen til en anden e-læringsplatform"
 
 msgid "List of users subscribed to course"
 msgstr "Oversigt over brugere tilmeldt kursussiden"
@@ -15618,7 +15618,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
