--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -5278,8 +5278,8 @@ msgstr "Wenn diese Option aktiviert ist, öffnet ein Klick auf eine E-Mail den o
 msgid "Include header line?"
 msgstr "Die CSV Header-Zeile hinzufügen?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Ja, den CSV Header hinzufügen<br/>Diese Zeile definiert Felder und ist notwendig, wenn man die Datei in ein andere Chamilo Installation importieren will."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Diese Zeile definiert Felder und ist notwendig, wenn man die Datei in ein andere Chamilo Installation importieren will."
 
 msgid "List of users subscribed to course"
 msgstr "Liste der im Kurs angemeldeten Benutzer"
@@ -15679,7 +15679,7 @@ msgstr "Liste der zu Kurs-Session-Leitern zugeordneten Kurse"
 msgid "Assign sessions to platform administrator"
 msgstr "Kurs-Sessions zu Administratoren zuordnen"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "Kurs-Sessions zu Kurs-Session-Leitern zuordnen"
 
 msgid "Assigned sessions list to platform administrator"
