--- a/translations/messages.el.po
+++ b/translations/messages.el.po
@@ -5225,8 +5225,8 @@ msgstr "If this option is activated, clicking on an e-mail address will open an 
 msgid "Include header line?"
 msgstr "Add the CSV header line?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Yes, add the CSV header<br />This line defines the fields and is necessary when you want to import the file in a different Chamilo portal"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "This line defines the fields and is necessary when you want to import the file in a different Chamilo portal"
 
 msgid "List of users subscribed to course"
 msgstr "List of users subscribed to course"
@@ -15626,8 +15626,8 @@ msgstr "Assigned courses list to sessions administrator"
 msgid "Assign sessions to platform administrator"
 msgstr "Assign sessions to platform administrator"
 
-msgid "assign sessions to sessions administrator"
-msgstr "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
+msgstr "Assign sessions to sessions administrator"
 
 msgid "Assigned sessions list to platform administrator"
 msgstr "Assigned sessions list to platform administrator"
