--- a/translations/messages.fa.po
+++ b/translations/messages.fa.po
@@ -5217,7 +5217,7 @@ msgstr ""
 msgid "Include header line?"
 msgstr ""
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
 msgstr ""
 
 msgid "List of users subscribed to course"
@@ -15618,7 +15618,7 @@ msgstr "انتصاب فهرست دروس به مدیر جلسه"
 msgid "Assign sessions to platform administrator"
 msgstr "انتصاب جلسات به مدیر پلاتفرم"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "انتصاب جلسات به مدیر جلسه"
 
 msgid "Assigned sessions list to platform administrator"
