--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -5372,8 +5372,8 @@ msgstr "Si cette option est activée, cliquer sur une adresse de courriel ouvrir
 msgid "Include header line?"
 msgstr "Inclure la ligne d'en-têtes ?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Oui, ajouter la ligne d'en-têtes<br />Placés en première ligne, les titres des champs sont utiles notamment lorsque vous souhaitez réimporter le fichier dans un portail Chamilo."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Placés en première ligne, les titres des champs sont utiles notamment lorsque vous souhaitez réimporter le fichier dans un portail Chamilo."
 
 msgid "List of users subscribed to course"
 msgstr "Liste des utilisateurs inscrits au cours"
@@ -16159,7 +16159,7 @@ msgstr "Cours assignés à l'administrateur de sessions"
 msgid "Assign sessions to platform administrator"
 msgstr "Assigner des sessions à l'administrateur de la plateforme"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "Assigner des sessions à l'administrateur de sessions"
 
 msgid "Assigned sessions list to platform administrator"
