--- a/translations/messages.he.po
+++ b/translations/messages.he.po
@@ -5226,7 +5226,7 @@ msgstr "אם אפשרות זו מופעלת, לחיצה על כתובת דואר
 msgid "Include header line?"
 msgstr "כלול שורת כותרת?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
 msgstr "כן, הוסף את הכותרות<br />זה יציב את שמות השדות בשורה הראשונה. זה הכרחי כאשר אתה רוצה לייבא את הקובץ מאוחר יותר בפורטל Chamilo."
 
 msgid "List of users subscribed to course"
@@ -15627,7 +15627,7 @@ msgstr "רשימת קורסים שהוקצתה למנהל הפעלות"
 msgid "Assign sessions to platform administrator"
 msgstr "הקצה הפעלות למנהל הפלטפורמה"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "הקצאת הפעלות למנהל הפעלות"
 
 msgid "Assigned sessions list to platform administrator"
