--- a/translations/messages.hu.po
+++ b/translations/messages.hu.po
@@ -5217,8 +5217,8 @@ msgstr "Ha ez a lehetőség aktíválva van, az email címekre rákattintva megn
 msgid "Include header line?"
 msgstr "CSV fejléc sor hozzáadása?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Igen, adja hozzá a CSV fejléceket <br />Ez a sor tartalmazza a szükséges mezőket, amikor különböző Chamilo rendszerekbe akarja importálni adatait."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Ez a sor tartalmazza a szükséges mezőket, amikor különböző Chamilo rendszerekbe akarja importálni adatait."
 
 msgid "List of users subscribed to course"
 msgstr ""
@@ -15618,7 +15618,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
