--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -5226,8 +5226,8 @@ msgstr "Attivando l'opzione, cliccando su un messaggio si aprirà un editor onli
 msgid "Include header line?"
 msgstr "Aggiungere la riga d'intestazione in CSV?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Sì, aggiungi la riga d'intestazione.<br />La riga d'intestazione indica il nome dei campi e serve per importare il file in altri Campus Chamilo"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "La riga d'intestazione indica il nome dei campi e serve per importare il file in altri Campus Chamilo"
 
 msgid "List of users subscribed to course"
 msgstr "Elenco degli utenti iscritti al corso"
@@ -15627,7 +15627,7 @@ msgstr "Elenco dei corsi assegnati all'amministratore delle sessioni"
 msgid "Assign sessions to platform administrator"
 msgstr "Assegna sessioni all'amministratore della piattaforma"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "Assegna sessioni all'amministratore delle sessioni"
 
 msgid "Assigned sessions list to platform administrator"
