--- a/translations/messages.ja.po
+++ b/translations/messages.ja.po
@@ -5280,7 +5280,7 @@ msgstr "このオプションをアクティブにした場合、電子メール
 msgid "Include header line?"
 msgstr ""
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
 msgstr ""
 
 msgid "List of users subscribed to course"
@@ -15681,7 +15681,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
