--- a/translations/messages.lt.po
+++ b/translations/messages.lt.po
@@ -5219,8 +5219,8 @@ msgstr "Jei šis nustatymas įjungtas, paspaudus ant el. pašto adreso, bus atid
 msgid "Include header line?"
 msgstr "Add the CSV header line?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Yes, add the CSV header<br />This line defines the fields and is necessary when you want to import the file in a different Chamilo campus"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "This line defines the fields and is necessary when you want to import the file in a different Chamilo campus"
 
 msgid "List of users subscribed to course"
 msgstr "List of users subscribed to course"
@@ -15620,7 +15620,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
