--- a/translations/messages.lv.po
+++ b/translations/messages.lv.po
@@ -5218,8 +5218,8 @@ msgstr "Ja šī opcija ir aktivizēta, noklikšķinot uz e-pasta adreses, tiks a
 msgid "Include header line?"
 msgstr "Pievienot CSV galveni?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Jā, pievienot CSV galveni. Tā definēs lauku, kurš ir svarīgs, ja Jūs vēlaties importēt failu citā Chamilo portālā."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Tā definēs lauku, kurš ir svarīgs, ja Jūs vēlaties importēt failu citā Chamilo portālā."
 
 msgid "List of users subscribed to course"
 msgstr "Lietotāju saraksts, kuri ir pierakstījušies uz apmācībām"
@@ -15619,7 +15619,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
