--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -5209,7 +5209,7 @@ msgstr ""
 msgid "Include header line?"
 msgstr ""
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
 msgstr ""
 
 msgid "List of users subscribed to course"
@@ -15613,7 +15613,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
@@ -29317,4 +29317,64 @@ msgid "Select all URLs"
 msgstr ""
 
 msgid "Search URL"
+msgstr ""
+
+msgid "Videos"
+msgstr ""
+
+msgid "Course unregistered from the URL"
+msgstr ""
+
+msgid "This page allows you to massively assign or remove the assignment of courses to/from many URLs in one single action. Assigning and removing courses to/from URLs can have a high impact on access for users and data stored about users' progress. Please use carefully."
+msgstr ""
+
+msgid "Add courses to URLs"
+msgstr ""
+
+msgid "Parent category"
+msgstr ""
+
+msgid "No parent"
+msgstr ""
+
+msgid "Cannot move category down"
+msgstr ""
+
+msgid "Cannot move category up"
+msgstr ""
+
+msgid "No course found in this category"
+msgstr ""
+
+msgid "Minimum number of assessments to validate"
+msgstr ""
+
+msgid "Number of assessments to validate in dependencies"
+msgstr ""
+
+msgid "Depends on assessments"
+msgstr ""
+
+msgid "Are you sure you want to unassign the selected users from the selected URLs?"
+msgstr ""
+
+msgid "Are you sure you want to assign the selected users to the selected URLs?"
+msgstr ""
+
+msgid "Remove users from selected URLs"
+msgstr ""
+
+msgid "Add users to selected URLs"
+msgstr ""
+
+msgid "User search"
+msgstr ""
+
+msgid "The user accounts have been unassigned from the URL"
+msgstr ""
+
+msgid "Add course to this URL"
+msgstr ""
+
+msgid "Remove from selection"
 msgstr ""
