--- a/translations/messages.qu_PE.po
+++ b/translations/messages.qu_PE.po
@@ -5217,8 +5217,8 @@ msgstr "Si se activa esta opción, al hacer clic en un correo electrónico, se a
 msgid "Include header line?"
 msgstr "¿ Añadir la linea de cabecera del CSV ?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Sí, añadir las cabeceras CSV <br /> Esta línea define los campos y es necesaria cuando quiera importar el archivo en otra plataforma Chamilo"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Esta línea define los campos y es necesaria cuando quiera importar el archivo en otra plataforma Chamilo"
 
 msgid "List of users subscribed to course"
 msgstr "Lista de usuarios inscritos en el curso"
@@ -15618,7 +15618,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
