--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -5226,8 +5226,8 @@ msgstr "Daca aceasta optiune este activata, click pe o adresa de email va deschi
 msgid "Include header line?"
 msgstr "Adaugati linia de antet CSV?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Da, adauga linia de antet CSV <br/> Aceasta linie defineste campurile si este necesara cand doriti sa importati un fisier intr-un alt campus Chamilo"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Aceasta linie defineste campurile si este necesara cand doriti sa importati un fisier intr-un alt campus Chamilo"
 
 msgid "List of users subscribed to course"
 msgstr "Lista utilizatorilor inscrisi la curs"
@@ -15627,7 +15627,7 @@ msgstr "Lista de cursuri atribuite a administratorului de sesiuni"
 msgid "Assign sessions to platform administrator"
 msgstr "Atribuiti sesiuni a administatorului plataformei"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "Atribuiti sesiuni a administatorului de sesiuni"
 
 msgid "Assigned sessions list to platform administrator"
