--- a/translations/messages.ru.po
+++ b/translations/messages.ru.po
@@ -5218,8 +5218,8 @@ msgstr "Если эта опция активирована, то кликнит
 msgid "Include header line?"
 msgstr "Добавить полосу заголовка в файле CSV?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Да, добавить CSV заголовок<br />Эта линия определяет поля и необходима, когда вы хотите импортировать файл в разные порталы Chamilo"
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Эта линия определяет поля и необходима, когда вы хотите импортировать файл в разные порталы Chamilo"
 
 msgid "List of users subscribed to course"
 msgstr "Список пользователей подписанных на курс"
@@ -15619,7 +15619,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
