--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -5225,7 +5225,7 @@ msgstr "Keď je táto možnosť aktivovaná, klikom na e-mailovú adresu sa otvo
 msgid "Include header line?"
 msgstr "Pridať riadok záhlavia CSV?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
 msgstr "Áno, pridať CSV hlavičku<br>"
 
 msgid "List of users subscribed to course"
@@ -15626,7 +15626,7 @@ msgstr "Priradenie zoznamu kurzov do stretnutia administrátora"
 msgid "Assign sessions to platform administrator"
 msgstr "Priradenie stretnutia administrátorovi platformy"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "Priradenie stretnutia do stretnutia administrátora"
 
 msgid "Assigned sessions list to platform administrator"
