--- a/translations/messages.sl.po
+++ b/translations/messages.sl.po
@@ -5226,8 +5226,8 @@ msgstr "V primeru, da je ta možnost aktivirana, klik na e-pošto odpre vgrajen 
 msgid "Include header line?"
 msgstr "Dodam CSV datoteki naslovno vrstico ?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Da, dodaj CSV naslovno vrstico<br />Ta vrstica določi polja datoteke in je potrebna v primeru, da želite importirati datoteko v (lahko drugo) Chamilo platformo."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Ta vrstica določi polja datoteke in je potrebna v primeru, da želite importirati datoteko v (lahko drugo) Chamilo platformo."
 
 msgid "List of users subscribed to course"
 msgstr "Seznam uporabnikov vpisanih v tečaj"
@@ -15627,7 +15627,7 @@ msgstr "Seznam upravitelju seje dodeljenih tečajev"
 msgid "Assign sessions to platform administrator"
 msgstr "Dodeli sejo upravitelju platforme"
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr "dodeli seje upravitelju sej"
 
 msgid "Assigned sessions list to platform administrator"
