--- a/translations/messages.tr.po
+++ b/translations/messages.tr.po
@@ -5217,8 +5217,8 @@ msgstr "Bu seçenek etkinleştirildi, bir eposta adresine tıklanması bir çevr
 msgid "Include header line?"
 msgstr "CSV başlık satırını ekle?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Evet, CSV başlığını ekle <br />Bu satır alanları tanımlar ve farklı bir Chamilo kampüsünde dosya göndermek isterseniz gereklidir."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Bu satır alanları tanımlar ve farklı bir Chamilo kampüsünde dosya göndermek isterseniz gereklidir."
 
 msgid "List of users subscribed to course"
 msgstr "Derse kayıtlı olan kullanıcıların listesi"
@@ -15618,7 +15618,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
