--- a/translations/messages.uk.po
+++ b/translations/messages.uk.po
@@ -5210,8 +5210,8 @@ msgstr "Якщо ця опція активована, натиснення на
 msgid "Include header line?"
 msgstr "Додати лінію заголовку в файлі CSV?"
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
-msgstr "Так, додати заголовок CSV.<br />Ця лінія визначає поля та необхідна при імпорті файлу на інший кампус Chamilo."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgstr "Ця лінія визначає поля та необхідна при імпорті файлу на інший кампус Chamilo."
 
 msgid "List of users subscribed to course"
 msgstr "Список користувачів, зарахованих на курс"
@@ -15611,7 +15611,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
