--- a/translations/messages.zh_TW.po
+++ b/translations/messages.zh_TW.po
@@ -5217,7 +5217,7 @@ msgstr "若敫用本項目，按下電郵地址時會開啟線上電郵編輯器
 msgid "Include header line?"
 msgstr ""
 
-msgid "Yes, add the headers<br />This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
+msgid "This will put the fields names on the first line. It is necessary when you want to import the file later on in a Chamilo portal."
 msgstr ""
 
 msgid "List of users subscribed to course"
@@ -15618,7 +15618,7 @@ msgstr ""
 msgid "Assign sessions to platform administrator"
 msgstr ""
 
-msgid "assign sessions to sessions administrator"
+msgid "Assign sessions to sessions administrator"
 msgstr ""
 
 msgid "Assigned sessions list to platform administrator"
